--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "chance": "^1.1.11",
     "connect-session-sequelize": "^7.0.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
@@ -36,6 +37,7 @@
     "sequelize": "^6.3.4",
     "sqlite3": "^5.0.11",
     "throttled-request": "^0.1.1",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "web3": "^1.10.0"
   }
 }
